// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should dismiss alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should display dismiss button for smaller screen size 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="WarningIcon"
              focusable="false"
              id="warning-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should display loader 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary spinner css-u4ps4u-MuiCircularProgress-root"
              data-testid="spinner"
              id="spinner"
              role="progressbar"
              style="width: 38px; height: 38px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.5"
                  stroke-width="3"
                />
              </svg>
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          disabled=""
          id="action-button"
          tabindex="-1"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should fire an action when user clicks on the message text 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="WarningIcon"
              focusable="false"
              id="warning-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Click me
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should not fire an action when user clicks on the message text and no action is assigned 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="WarningIcon"
              focusable="false"
              id="warning-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Click me
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render clickable action button 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an error title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an error message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          Dismiss
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render custom alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-eosocp-MuiGrid-root"
          >
            test
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is a custom title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is a custom message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render default view 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="WarningIcon"
              focusable="false"
              id="warning-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              Title - 
            </b>
            <span
              data-testid="alert-message"
            >
              Message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render done type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1pzs6xa-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="DoneIcon"
              focusable="false"
              id="done-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an done title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an done message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render error outline type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorOutlineIcon"
              focusable="false"
              id="error-outline-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an error outline title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an error outline message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render error type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an error title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an error message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render error type of alert by default 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-vxa7lt-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an error title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an error message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render help outline type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-tth9zo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="HelpOutlineIcon"
              focusable="false"
              id="help-outline-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an help outline title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an help outline message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render help type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-tth9zo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="HelpIcon"
              focusable="false"
              id="help-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an help title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an help message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render info outline type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-nhty2z-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="InfoOutlinedIcon"
              focusable="false"
              id="info-outline-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an info outline title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an info outline message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render info type of alert 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-nhty2z-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-yrmeox-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
              data-testid="InfoIcon"
              focusable="false"
              id="info-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
          >
            <b>
              This is an info title - 
            </b>
            <span
              data-testid="alert-message"
            >
              This is an info message
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-zxylgf-MuiGrid-root"
          >
            <button
              aria-label="Click to dismiss this alert"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="dismiss-mobile"
              data-testid="dismiss-mobile"
              id="dismiss-mobile"
              tabindex="0"
              title="Click to dismiss this alert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-sm-auto css-1vayr8-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth action alert-button css-hf3h6t-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="action-button"
          data-testid="action-button"
          id="action-button"
          tabindex="0"
          type="button"
        >
          button
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1lq6dh0-MuiGrid-root"
      >
        <button
          aria-label="Click to dismiss this alert"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="dismiss"
          data-testid="dismiss"
          id="dismiss"
          tabindex="0"
          title="Click to dismiss this alert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium dismiss css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
